--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,26 @@
-# this is a file for all external libraries and packages
+# QuickDrop Backend Dependencies
+# Flask and Extensions
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+Flask-JWT-Extended==4.6.0
+Flask-CORS==4.0.0
+
+# API Documentation
+flasgger==0.9.7.1
+
+# Database
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+
+# Security
+Werkzeug==3.0.1
+python-dotenv==1.0.0
+bcrypt==4.1.2
+
+# Utilities
+python-dateutil==2.8.2
+
+# Development
+pytest==7.4.3
+pytest-cov==4.1.0
