--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,36 @@
-# QuickDrop Backend Dependencies
-# Flask and Extensions
-Flask==2.3.3
-Flask-SQLAlchemy==2.5.1
-Flask-Migrate==4.0.5
-Flask-JWT-Extended==4.6.0
-Flask-CORS==4.0.0
-
-# API Documentation
-flasgger==0.9.7.1
-
-# Database
-psycopg2-binary==2.9.11
-SQLAlchemy==1.4.52
-
-# Security
-Werkzeug==2.3.7
-python-dotenv==1.0.0
+alembic==1.17.1
+attrs==25.4.0
 bcrypt==4.1.2
-
-# Utilities
-python-dateutil==2.8.2
-
-# Development
+blinker==1.9.0
+click==8.3.0
+coverage==7.11.3
+flasgger==0.9.7.1
+Flask==3.0.0
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+Mako==1.3.10
+MarkupSafe==3.0.3
+mistune==3.1.4
+packaging==25.0
+pluggy==1.6.0
+psycopg2-binary==2.9.9
+PyJWT==2.10.1
 pytest==7.4.3
 pytest-cov==4.1.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+PyYAML==6.0.3
+referencing==0.37.0
+rpds-py==0.28.0
+six==1.17.0
+SQLAlchemy==2.0.23
+typing_extensions==4.15.0
+Werkzeug==3.0.1
